# dekpy

./: README.md  pyproject.toml
dekpy/: __init__.py
